# PythonDataScience

1-ImportingDataFromInternet/1-ImportingFromWeb/: main.py
1-ImportingDataFromInternet/2-OpeningReadingFromWeb/: main.py
1-ImportingDataFromInternet/3-ImportNonFlatFromWeb/: main.py
1-ImportingDataFromInternet/5-PrintHTTPRequestUsingUrllib/: main.py
1-ImportingDataFromInternet/7-ParsingHTMLBeautifulSoup/: main.py
1-ImportingDataFromInternet/8-TurningWebpageDataIntoText/: main.py
1-ImportingDataFromInternet/9-TurningWEbapageDataIntoHyperlinks/: main.py
2-InteractingWithAPIsToImportDataFromWweb/: readme.md
2-InteractingWithAPIsToImportDataFromWweb/1-APIRequests/: main.py
2-InteractingWithAPIsToImportDataFromWweb/3-CheckingOutWikipediaAPI/: main.py
3-DivingDeepIntoTwitterAPI/: main.py  pyproject.toml
Numpy/: Numpy.ipynb  NumpyDesafio.ipynb
Pandas/: Pandas.py  PandasDesafio.py
